fix: contrast of sidebar elements and rename page

--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,3 +1,3 @@
 .active-link {
-  color: #545454;
+  color: #e00;
 }
